compiler/tools/fpp-check/test/redef/enum_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/enum_constant.fpp: 3.3
  X
  ^
error: redefinition of symbol X
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/enum_constant.fpp: 2.3
  X
  ^
